WIP: Comments tab on DBE - Can set status
By clicking on the comment status, the user can now cycle it through the
three different valid statuses. If there ever end up being more than,
say, six or seven valid choices, then we should turn this into a
dropdown. But since there are just three, click-to-cycle works nicely.

--- a/src/angular-app/languageforge/lexicon/directive/dc-comments.html
+++ b/src/angular-app/languageforge/lexicon/directive/dc-comments.html
@@ -9,7 +9,7 @@
 		<div class="all-but-score">
 			<div class="comment-date-and-status">
 				<span class="comment-date">{{comment.dateModified | date:'yyyy-MM-dd'}}</span>
-				Comment status <span class="comment-status">{{comment.status}}</span>
+				Comment status <span class="comment-status" ng-click="comment.status = nextStatus(comment.status)">{{comment.status}}</span>
 				<!-- TODO: add CSS to give a specific width to the two spans so they will always line up vertically with each other -->
 			</div>
 			<div class="avatar-and-content">
