--- a/src/angular-app/languageforge/lexicon/ng-app.html
+++ b/src/angular-app/languageforge/lexicon/ng-app.html
@@ -1,5 +1,5 @@
-<div class="sfcontainer">
-	<div class="container" data-ng-cloak style="margin-top:10px; width:100%">
+<div data-ng-controller="MainCtrl" class="sfcontainer">
+	<div data-ng-show="hasProjectConfig" class="container" data-ng-cloak style="margin-top:10px; width:100%">
 		<div id="lexicon-hmenu" class="hdrnav" data-ng-controller="LexiconMenuCtrl">
 			<!-- Don't need breadcrumbs <ul id="top" class="topCrumbs" data-breadcrumbs></ul> -->
 			<ul>
