--- a/src/angular-app/languageforge/lexicon/directive/dc-rendered.html
+++ b/src/angular-app/languageforge/lexicon/directive/dc-rendered.html
@@ -1,5 +1,5 @@
 <div class="dc-rendered" ng-hide="hideIfEmpty && !definition.label">
 	<span class="dc-rendered word">{{definition.label}}</span>
-	<span class="dc-rendered definition">{{definition.rendered}}</span>
+	<span class="dc-rendered definition" ng-repeat="sense in definition.senses">{{sense}}</span>
 	<hr />
 </div>
