--- a/src/angular-app/languageforge/lexicon/ng-app.html
+++ b/src/angular-app/languageforge/lexicon/ng-app.html
@@ -1,28 +1,40 @@
 <div data-ng-controller="MainCtrl" class="sfcontainer">
 	<div data-ng-show="hasProjectConfig" class="container" data-ng-cloak style="margin-top:10px; width:100%">
-		<div id="lexicon-hmenu" class="hdrnav" data-ng-controller="LexiconMenuCtrl">
+		<div id="lexicon-hmenu" data-ng-controller="LexiconMenuCtrl">
 			<!-- Don't need breadcrumbs <ul id="top" class="topCrumbs" data-breadcrumbs></ul> -->
-			<ul>
-				<li data-ng-show="isItemVisible('view')"><a href="#/p/{{projectId}}/view"><i class="icon-eye-open"></i> View</a></li>
-				<li data-ng-show="isItemVisible('dashboard')"><a href="#/p/{{projectId}}"><i class="icon-bookmark"></i> Dashboard</a></li>
-				<li class="submenu">
-					<ul data-collapse="!isSubmenuVisible(gatherSubmenuId)" data-ng-mouseleave="hideAllSubmenus(300)" data-ng-mouseenter="cancelHiding()">
-						<li data-ng-show="isItemVisible('review')"      ><a href="#/p/{{projectId}}/review" data-ng-click="hideAllSubmenus()">Review</a></li>
-						<li data-ng-show="isItemVisible('gatherTexts')"><a href="#/p/{{projectId}}/gather-texts" data-ng-click="hideAllSubmenus()">From texts</a></li>
-						<li data-ng-show="isItemVisible('semdom')"      ><a href="#/p/{{projectId}}/semdom" data-ng-click="hideAllSubmenus()">From Semantic Domains</a></li>
-						<li data-ng-show="isItemVisible('wordlist')"    ><a href="#/p/{{projectId}}/wordlist" data-ng-click="hideAllSubmenus()">From a Word List</a></li>
-						<li data-ng-show="isItemVisible('dbe')"         ><a href="#/p/{{projectId}}/dbe" data-ng-click="hideAllSubmenus()">Browse and edit</a></li>
+			<div class="control-group pull-right">
+				<div class="btn-group">
+					<a class="btn dropdown-toggle" data-toggle="dropdown" href="#" style="font-weight:normal">
+						<i class="icon-cog icon-2x" data-tooltip="Project Settings"></i>&nbsp;&nbsp;<span class="caret"></span></a>
+					<ul class="dropdown-menu">
+						<li><a href="#/p/{{projectId}}/importExport" data-ng-show="isItemVisible('importExport')">Import/Export</a></li>
+						<li class="divider" data-ng-show="isItemVisible('importExport')"></li>
+						<li><a href="#/p/{{projectId}}/settings" data-ng-style="{disabled: !isItemVisible('settings')}">Settings</a></li>
 					</ul>
-				<a class="pointer" data-ng-click="showSubmenu(gatherSubmenuId)"><i class="icon-th"></i> Gather Words <i data-ng-class="iconName(gatherSubmenuId)"></i></a></li>
-				<li class="submenu">
-					<ul data-collapse="!isSubmenuVisible(addSubmenuId)" data-ng-mouseleave="hideAllSubmenus(300)" data-ng-mouseenter="cancelHiding()">
-						<li data-ng-show="isItemVisible('addMeanings')"><a href="#/p/{{projectId}}/add-meanings" data-ng-click="hideAllSubmenus()">Add meanings</a></li>
-						<li data-ng-show="isItemVisible('addGrammar')" ><a href="#/p/{{projectId}}/add-grammar" data-ng-click="hideAllSubmenus()">Add grammatical usage</a></li>
-						<li data-ng-show="isItemVisible('addExamples')"><a href="#/p/{{projectId}}/add-examples" data-ng-click="hideAllSubmenus()">Add examples</a></li>
-					</ul>
-				<a class="pointer" data-ng-click="showSubmenu(addSubmenuId)"><i class="icon-plus"></i> Add Information <i data-ng-class="iconName(addSubmenuId)"></i></a></li>
-				<li><a href="#/p/{{projectId}}/settings" data-ng-show="isItemVisible('settings')"><i class="icon-cog"></i> Settings</a></li>
-			</ul>
+				</div>
+			</div>
+			<div class="hdrnav">
+				<ul>
+					<li data-ng-show="isItemVisible('view')"><a href="#/p/{{projectId}}/view"><i class="icon-eye-open"></i> View</a></li>
+					<li data-ng-show="isItemVisible('dashboard')"><a href="#/p/{{projectId}}"><i class="icon-bookmark"></i> Dashboard</a></li>
+					<li class="submenu">
+						<ul data-collapse="!isSubmenuVisible(gatherSubmenuId)" data-ng-mouseleave="hideAllSubmenus(300)" data-ng-mouseenter="cancelHiding()">
+							<li data-ng-show="isItemVisible('review')"      ><a href="#/p/{{projectId}}/review" data-ng-click="hideAllSubmenus()">Review</a></li>
+							<li data-ng-show="isItemVisible('gatherTexts')"><a href="#/p/{{projectId}}/gather-texts" data-ng-click="hideAllSubmenus()">From texts</a></li>
+							<li data-ng-show="isItemVisible('semdom')"      ><a href="#/p/{{projectId}}/semdom" data-ng-click="hideAllSubmenus()">From Semantic Domains</a></li>
+							<li data-ng-show="isItemVisible('wordlist')"    ><a href="#/p/{{projectId}}/wordlist" data-ng-click="hideAllSubmenus()">From a Word List</a></li>
+							<li data-ng-show="isItemVisible('dbe')"         ><a href="#/p/{{projectId}}/dbe" data-ng-click="hideAllSubmenus()">Browse and edit</a></li>
+						</ul>
+					<a class="pointer" data-ng-click="showSubmenu(gatherSubmenuId)"><i class="icon-th"></i> Gather Words <i data-ng-class="iconName(gatherSubmenuId)"></i></a></li>
+					<li class="submenu">
+						<ul data-collapse="!isSubmenuVisible(addSubmenuId)" data-ng-mouseleave="hideAllSubmenus(300)" data-ng-mouseenter="cancelHiding()">
+							<li data-ng-show="isItemVisible('addMeanings')"><a href="#/p/{{projectId}}/add-meanings" data-ng-click="hideAllSubmenus()">Add meanings</a></li>
+							<li data-ng-show="isItemVisible('addGrammar')" ><a href="#/p/{{projectId}}/add-grammar" data-ng-click="hideAllSubmenus()">Add grammatical usage</a></li>
+							<li data-ng-show="isItemVisible('addExamples')"><a href="#/p/{{projectId}}/add-examples" data-ng-click="hideAllSubmenus()">Add examples</a></li>
+						</ul>
+					<a class="pointer" data-ng-click="showSubmenu(addSubmenuId)"><i class="icon-plus"></i> Add Information <i data-ng-class="iconName(addSubmenuId)"></i></a></li>
+				</ul>
+			</div>
 		</div>
 		<div data-sil-notices></div>
 		<div data-ng-view></div>
