LIFT Import layout

--- a/src/angular-app/languageforge/lexicon/ng-app.html
+++ b/src/angular-app/languageforge/lexicon/ng-app.html
@@ -6,7 +6,7 @@
 				<div class="btn-group">
 					<a class="btn dropdown-toggle" data-toggle="dropdown" data-tooltip="Project Settings" href="#">
 						<i class="icon-cog icon-2x"></i>&nbsp;&nbsp;<span class="caret"></span></a>
-					<ul class="dropdown-menu">
+					<ul class="dropdown-menu pull-right">
 						<li data-ng-show="isItemVisible('importExport')"><a href="#/p/{{projectId}}/importExport">Import/Export</a></li>
 						<li class="divider" data-ng-show="isItemVisible('importExport')"></li>
 						<li data-ng-class="{disabled: !isItemVisible('settings')}"><a href="#/p/{{projectId}}/settings">Settings</a></li>
