--- a/src/angular-app/languageforge/lexicon/ng-app.html
+++ b/src/angular-app/languageforge/lexicon/ng-app.html
@@ -4,7 +4,7 @@
 			<!-- Don't need breadcrumbs <ul id="top" class="topCrumbs" data-breadcrumbs></ul> -->
 			<div class="control-group pull-right">
 				<div class="btn-group">
-					<a class="btn dropdown-toggle" data-toggle="dropdown" data-tooltip="Project Settings" href="#">
+					<a class="btn dropdown-toggle" data-toggle="dropdown" data-tooltip-placement="left" data-tooltip="Project Settings" href="#">
 						<i class="icon-cog icon-2x"></i>&nbsp;&nbsp;<span class="caret"></span></a>
 					<ul class="dropdown-menu pull-right">
 						<li data-ng-show="isItemVisible('importExport')"><a href="#/p/{{projectId}}/importExport">Import/Export</a></li>
