--- a/src/angular-app/languageforge/lexicon/directive/dc-entry.html
+++ b/src/angular-app/languageforge/lexicon/directive/dc-entry.html
@@ -1,5 +1,5 @@
 <div class="dc-entry">
-	<dc-multitext definition="config.entry.fields.lexeme" model="model.lexeme"></dc-multitext>
+	<dc-multitext config="config.entry.fields.lexeme" model="model.lexeme"></dc-multitext>
 	<div class="addItem"><a data-ng-click="addSense()">Add Meaning</a></div>
 		<div class="animate-repeat" data-ng-repeat="sense in model.senses">
 			<dc-sense remove="deleteSense" index="$index" config="config.entry.fields.senses" model="sense"></dc-sense>
