--- a/src/angular-app/languageforge/lexicon/directive/dc-optionlist.html
+++ b/src/angular-app/languageforge/lexicon/directive/dc-optionlist.html
@@ -1,9 +1,9 @@
 <form class="form-horizontal dc-optionlist">
-    <label class="control-label">{{definition.label}}</label>
+    <label class="control-label">{{config.label}}</label>
         <div class="controls">
-            <select ng-model="model.value" ng-options="key as label for (key, label) in definition.values">
+            <select ng-model="model.value" ng-options="key as label for (key, label) in config.values">
                 <option value="">Unknown</option>
             </select>
         </div>
-        <dc-comments data-ng-show="definition.commentsVisible" dc-config="definition" dc-model="model"></dc-comments>
+        <dc-comments data-ng-show="config.commentsVisible" dc-config="config" dc-model="model"></dc-comments>
 </form>
