--- a/src/angular-app/languageforge/lexicon/directive/dc-sense.html
+++ b/src/angular-app/languageforge/lexicon/directive/dc-sense.html
@@ -4,10 +4,10 @@
 		<div data-ng-if="config.fields[fieldName].visible">
 			<div data-ng-switch data-on="config.fields[fieldName].type">
 				<div data-ng-switch-when="optionlist">
-					<dc-optionlist definition="config.fields[fieldName]" model="model[fieldName]"></dc-optionlist>
+					<dc-optionlist config="config.fields[fieldName]" model="model[fieldName]"></dc-optionlist>
 				</div>
 				<div data-ng-switch-when="multitext">
-					<dc-multitext definition="config.fields[fieldName]" model="model[fieldName]"></dc-multitext>
+					<dc-multitext config="config.fields[fieldName]" model="model[fieldName]"></dc-multitext>
 				</div>
 				<div data-ng-switch-when="fields">
 					<pre data-ng-show="false">{{config | json}}</pre>
