--- a/src/angular-app/languageforge/lexicon/ng-app.html
+++ b/src/angular-app/languageforge/lexicon/ng-app.html
@@ -2,8 +2,10 @@
 	<div class="container" data-ng-cloak style="margin-top:10px; width:100%">
 		<div id="lexicon-hmenu" data-ng-controller="LexiconMenuCtrl">
 			<!-- Don't need breadcrumbs <ul id="top" class="topCrumbs" data-breadcrumbs></ul> -->
-			<div class="control-group pull-right">
-				<div class="btn-group">
+			<div class="control-group">
+			</div>
+			<div class="lexnav control-group">
+				<div class="btn-group pull-right">
 					<a class="btn dropdown-toggle" data-toggle="dropdown" data-tooltip-placement="left" data-tooltip="Project Settings" href="#">
 						<i class="icon-cog icon-2x"></i>&nbsp;&nbsp;<span class="caret"></span></a>
 					<ul class="dropdown-menu pull-right">
@@ -12,18 +14,22 @@
 						<li data-ng-class="{disabled: !isItemVisible('settings')}"><a href="#/p/{{projectId}}/settings">Settings</a></li>
 					</ul>
 				</div>
-			</div>
-			<div class="btn-group lexnav">
-				<a class="btn" data-ng-show="isItemVisible('view')" href="#/p/{{projectId}}/view"><i class="icon-eye-open icon-2x"></i> View</a>
-				<a class="btn" data-ng-show="isItemVisible('dashboard')" href="#/p/{{projectId}}"><i class="icon-bookmark icon-2x"></i> Dashboard</a>
+				<div class="btn-group" data-ng-show="isItemVisible('view')">
+					<a class="btn" href="#/p/{{projectId}}/view"><i class="icon-eye-open icon-2x"></i> View</a>
+				</div>
+				<div class="btn-group" data-ng-show="isItemVisible('dashboard')">
+					<a class="btn" href="#/p/{{projectId}}"><i class="icon-bookmark icon-2x"></i> Dashboard</a>
+				</div>
 				<div class="btn-group">
 					<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
 						<i class="icon-th icon-2x"></i> Gather Words <span class="caret"></span></a>
 					<ul class="dropdown-menu">
 						<li data-ng-show="isItemVisible('review')"     ><a href="#/p/{{projectId}}/review">Review</a></li>
+						<li class="divider" data-ng-show="isItemVisible('review')"></li>
 						<li data-ng-show="isItemVisible('gatherTexts')"><a href="#/p/{{projectId}}/gather-texts">From texts</a></li>
 						<li data-ng-show="isItemVisible('semdom')"     ><a href="#/p/{{projectId}}/semdom">From Semantic Domains</a></li>
 						<li data-ng-show="isItemVisible('wordlist')"   ><a href="#/p/{{projectId}}/wordlist">From a Word List</a></li>
+						<li class="divider" data-ng-show="isItemVisible('dbe')"></li>
 						<li data-ng-show="isItemVisible('dbe')"        ><a href="#/p/{{projectId}}/dbe">Browse and edit</a></li>
 					</ul>
 				</div>
