--- a/src/angular-app/languageforge/lexicon/ng-app.html
+++ b/src/angular-app/languageforge/lexicon/ng-app.html
@@ -20,60 +20,35 @@
 					<li data-ng-class="{disabled: !isItemVisible('settings')}"><a href="#/p/{{projectId}}/settings">Settings</a></li>
 				</ul>
 			</div>
-			<div class="btn-group" data-ng-show="isItemVisible('view')">
-				<a class="btn" href="#/p/{{projectId}}/view"><i class="icon-eye-open icon-2x"></i> View</a>
-			</div>
 			<div class="btn-group" data-ng-show="isItemVisible('dashboard')">
 				<a class="btn" href="#/p/{{projectId}}"><i class="icon-bookmark icon-2x"></i> Dashboard</a>
+			</div>
+			<div class="btn-group" data-ng-show="isItemVisible('view')">
+				<a class="btn" href="#/p/{{projectId}}/view"><i class="icon-eye-open icon-2x"></i> View</a>
 			</div>
 			<div class="btn-group">
 				<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
 					<i class="icon-th icon-2x"></i> Gather Words <span class="caret"></span></a>
 				<ul class="dropdown-menu">
-					<li data-ng-show="isItemVisible('review')"     ><a href="#/p/{{projectId}}/review">Review</a></li>
-					<li class="divider" data-ng-show="isItemVisible('review')"></li>
-					<li data-ng-show="isItemVisible('gatherTexts')"><a href="#/p/{{projectId}}/gather-texts">From texts</a></li>
-					<li data-ng-show="isItemVisible('semdom')"     ><a href="#/p/{{projectId}}/semdom">From Semantic Domains</a></li>
-					<li data-ng-show="isItemVisible('wordlist')"   ><a href="#/p/{{projectId}}/wordlist">From a Word List</a></li>
-					<li class="divider" data-ng-show="isItemVisible('dbe')"></li>
 					<li data-ng-show="isItemVisible('dbe')"        ><a href="#/p/{{projectId}}/dbe">Browse and edit</a></li>
+					<li class="divider" data-ng-show="isItemVisible('review')"></li>
+					<li data-ng-show="isItemVisible('gatherTexts')"><a href="#/p/{{projectId}}/gather-texts">from Texts</a></li>
+					<li data-ng-show="isItemVisible('semdom')"     ><a href="#/p/{{projectId}}/semdom">from Semantic Domains</a></li>
+					<li data-ng-show="isItemVisible('wordlist')"   ><a href="#/p/{{projectId}}/wordlist">from a Word List</a></li>
+					<li class="divider" data-ng-show="isItemVisible('dbe')"></li>
+					<li data-ng-show="isItemVisible('review')"     ><a href="#/p/{{projectId}}/review">Review</a></li>
 				</ul>
 			</div>
 			<div class="btn-group">
 				<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
 					<i class="icon-plus icon-2x"></i> Add Information <span class="caret"></span></a>
 				<ul class="dropdown-menu">
-						<li data-ng-show="isItemVisible('addMeanings')"><a href="#/p/{{projectId}}/add-meanings">Add meanings</a></li>
-						<li data-ng-show="isItemVisible('addGrammar')" ><a href="#/p/{{projectId}}/add-grammar">Add grammatical usage</a></li>
-						<li data-ng-show="isItemVisible('addExamples')"><a href="#/p/{{projectId}}/add-examples">Add examples</a></li>
+						<li data-ng-show="isItemVisible('addMeanings')"><a href="#/p/{{projectId}}/add-meanings">add Meanings</a></li>
+						<li data-ng-show="isItemVisible('addGrammar')" ><a href="#/p/{{projectId}}/add-grammar">add Grammatical Usage</a></li>
+						<li data-ng-show="isItemVisible('addExamples')"><a href="#/p/{{projectId}}/add-examples">add Examples</a></li>
 				</ul>
 			</div>
 		</div>
-		
-		<!--
-		<div class="hdrnav">
-			<ul>
-				<li data-ng-show="isItemVisible('view')"><a href="#/p/{{projectId}}/view"><i class="icon-eye-open"></i> View</a></li>
-				<li data-ng-show="isItemVisible('dashboard')"><a href="#/p/{{projectId}}"><i class="icon-bookmark"></i> Dashboard</a></li>
-				<li class="submenu">
-					<ul data-collapse="!isSubmenuVisible(gatherSubmenuId)" data-ng-mouseleave="hideAllSubmenus(300)" data-ng-mouseenter="cancelHiding()">
-						<li data-ng-show="isItemVisible('review')"      ><a href="#/p/{{projectId}}/review" data-ng-click="hideAllSubmenus()">Review</a></li>
-						<li data-ng-show="isItemVisible('gatherTexts')"><a href="#/p/{{projectId}}/gather-texts" data-ng-click="hideAllSubmenus()">From texts</a></li>
-						<li data-ng-show="isItemVisible('semdom')"      ><a href="#/p/{{projectId}}/semdom" data-ng-click="hideAllSubmenus()">From Semantic Domains</a></li>
-						<li data-ng-show="isItemVisible('wordlist')"    ><a href="#/p/{{projectId}}/wordlist" data-ng-click="hideAllSubmenus()">From a Word List</a></li>
-						<li data-ng-show="isItemVisible('dbe')"         ><a href="#/p/{{projectId}}/dbe" data-ng-click="hideAllSubmenus()">Browse and edit</a></li>
-					</ul>
-				<a class="pointer" data-ng-click="showSubmenu(gatherSubmenuId)"><i class="icon-th"></i> Gather Words <i data-ng-class="iconName(gatherSubmenuId)"></i></a></li>
-				<li class="submenu">
-					<ul data-collapse="!isSubmenuVisible(addSubmenuId)" data-ng-mouseleave="hideAllSubmenus(300)" data-ng-mouseenter="cancelHiding()">
-						<li data-ng-show="isItemVisible('addMeanings')"><a href="#/p/{{projectId}}/add-meanings" data-ng-click="hideAllSubmenus()">Add meanings</a></li>
-						<li data-ng-show="isItemVisible('addGrammar')" ><a href="#/p/{{projectId}}/add-grammar" data-ng-click="hideAllSubmenus()">Add grammatical usage</a></li>
-						<li data-ng-show="isItemVisible('addExamples')"><a href="#/p/{{projectId}}/add-examples" data-ng-click="hideAllSubmenus()">Add examples</a></li>
-					</ul>
-				<a class="pointer" data-ng-click="showSubmenu(addSubmenuId)"><i class="icon-plus"></i> Add Information <i data-ng-class="iconName(addSubmenuId)"></i></a></li>
-			</ul>
-		</div>
-		-->
 	</div>
 	<div data-sil-notices></div>
 	<div data-ng-view></div>
