--- a/src/angular-app/languageforge/lexicon/directive/dc-sense.html
+++ b/src/angular-app/languageforge/lexicon/directive/dc-sense.html
@@ -4,16 +4,16 @@
 		<div data-ng-if="config.fields[fieldName].visible">
 			<div data-ng-switch data-on="config.fields[fieldName].type">
 				<div data-ng-switch-when="optionlist">
-					<dc-optionlist config="config.fields[fieldName]" model="model[fieldName]"></dc-optionlist>
+					<dc-optionlist config="config.fields[fieldName]" model="model[fieldName]" comment="submitComment(comment, fieldName)"></dc-optionlist>
 				</div>
 				<div data-ng-switch-when="multitext">
-					<dc-multitext config="config.fields[fieldName]" model="model[fieldName]"></dc-multitext>
+					<dc-multitext config="config.fields[fieldName]" model="model[fieldName]" comment="submitComment(comment, fieldName)"></dc-multitext>
 				</div>
 				<div data-ng-switch-when="fields">
 					<div data-ng-switch data-on="fieldName">
 						<div data-ng-switch-when="examples">
 							<div class="animate-repeat" data-ng-repeat="example in model.examples"> 
-								<dc-example remove="deleteExample" index="$index" config="config.fields[fieldName]" model="example"></dc-example>
+								<dc-example remove="deleteExample" index="$index" config="config.fields[fieldName]" model="example" comment="submitComment(comment, fieldName)"></dc-example>
 							</div>
 							<div class="addItem"><a data-ng-click="addExample()">Add Example</a></div>
 						</div>
