--- a/src/angular-app/languageforge/lexicon/directive/dc-optionlist.html
+++ b/src/angular-app/languageforge/lexicon/directive/dc-optionlist.html
@@ -5,5 +5,5 @@
                 <option value="">Unknown</option>
             </select>
         </div>
-        <dc-comments data-ng-show="config.commentsVisible" dc-config="config" dc-model="model"></dc-comments>
+        <dc-comments data-ng-show="config.commentsVisible" config="config" model="model" submit="submitComment(comment)"></dc-comments>
 </form>
