--- a/src/angular-app/languageforge/lexicon/ng-app.html
+++ b/src/angular-app/languageforge/lexicon/ng-app.html
@@ -23,10 +23,10 @@
 				</ul>
 			</div>
 			<div class="btn-group" data-ng-show="isItemVisible('dashboard')">
-				<a class="btn" href="#/p/{{projectId}}"><i class="icon-bookmark icon-2x"></i> Dashboard</a>
+				<a class="btn" href="#/p/{{projectId}}"><i class="icon-bookmark icon-2x"></i> *NYI*  Dashboard</a>
 			</div>
 			<div class="btn-group" data-ng-show="isItemVisible('view')">
-				<a class="btn" href="#/p/{{projectId}}/view"><i class="icon-eye-open icon-2x"></i> View</a>
+				<a class="btn" href="#/p/{{projectId}}/view"><i class="icon-eye-open icon-2x"></i> *NYI*  View</a>
 			</div>
 			<div class="btn-group">
 				<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
@@ -34,16 +34,16 @@
 				<ul class="dropdown-menu">
 					<li data-ng-show="isItemVisible('dbe')"        ><a href="#/p/{{projectId}}/dbe">Browse and Edit</a></li>
 					<li class="divider" data-ng-show="isItemVisible('dbe')"></li>
-					<li data-ng-show="isItemVisible('gatherTexts')"><a href="#/p/{{projectId}}/gather-texts">from Texts</a></li>
-					<li data-ng-show="isItemVisible('semdom')"     ><a href="#/p/{{projectId}}/semdom">from Semantic Domains</a></li>
-					<li data-ng-show="isItemVisible('wordlist')"   ><a href="#/p/{{projectId}}/wordlist">from a Word List</a></li>
+					<li data-ng-show="isItemVisible('gatherTexts')"><a href="#/p/{{projectId}}/gather-texts">*NYI* from Texts</a></li>
+					<li data-ng-show="isItemVisible('semdom')"     ><a href="#/p/{{projectId}}/semdom">*NYI* from Semantic Domains</a></li>
+					<li data-ng-show="isItemVisible('wordlist')"   ><a href="#/p/{{projectId}}/wordlist">*NYI* from a Word List</a></li>
 					<li class="divider" data-ng-show="isItemVisible('review')"></li>
-					<li data-ng-show="isItemVisible('review')"     ><a href="#/p/{{projectId}}/review">Review</a></li>
+					<li data-ng-show="isItemVisible('review')"     ><a href="#/p/{{projectId}}/review">*NYI* Review</a></li>
 				</ul>
 			</div>
 			<div class="btn-group">
 				<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
-					<i class="icon-plus icon-2x"></i> Add Information <span class="caret"></span></a>
+					<i class="icon-plus icon-2x"></i> *NYI* Add Information <span class="caret"></span></a>
 				<ul class="dropdown-menu">
 						<li data-ng-show="isItemVisible('addMeanings')"><a href="#/p/{{projectId}}/add-meanings">add Meanings</a></li>
 						<li data-ng-show="isItemVisible('addGrammar')" ><a href="#/p/{{projectId}}/add-grammar">add Grammatical Usage</a></li>
