comments fix up wip
Former-commit-id: 52f49aa91c8609e9bf55d47eb3ca1fb18cd750fe

--- a/src/angular-app/languageforge/lexicon/directive/dc-comments.html
+++ b/src/angular-app/languageforge/lexicon/directive/dc-comments.html
@@ -1,6 +1,7 @@
 <div class="dc-comments" >
 	<!-- ng-repeat over existing comments, nested comments (Design note: two different things? Or the same thing? I'm inclined to say same thing.) -->
 	<div class="comment" data-ng-repeat="comment in model.comments">
+	    <pre>{{comment|json}}</pre>
  		<div class="scorecontrol">
 			<div class="scorearrow"><a ng-click="incScore(comment)"><i class="icon-caret-up icon-2x"></i></a></div>
 			<div class="score">{{comment.score}}</div>
