--- a/src/angular-app/languageforge/lexicon/directive/dc-multioptionlist.html
+++ b/src/angular-app/languageforge/lexicon/directive/dc-multioptionlist.html
@@ -7,5 +7,5 @@
             </select>
             <button ng-click="addValue()" class="btn btn-small"><i class="icon-plus"></i>Add</button>
         </div>
-        <dc-comments data-ng-show="config.commentsVisible" config="config" model="model"></dc-comments>
+        <dc-comments control="control" config="config" model="model"></dc-comments>
 </form>
