--- a/src/angular-app/languageforge/lexicon/directive/dc-example.html
+++ b/src/angular-app/languageforge/lexicon/directive/dc-example.html
@@ -1,10 +1,10 @@
 <div class="dc-example">
-	<div class="deleteX pull-right"><i data-ng-click="remove(index)" title="Delete Example Sentence" class="icon-remove"></i></div>
+	<div ng-show="control.canDeleteExample()" class="deleteX pull-right"><i data-ng-click="remove(index)" title="Delete Example Sentence" class="icon-remove"></i></div>
 	<div data-ng-repeat="fieldName in config.fieldOrder">
 		<div data-ng-if="config.fields[fieldName].visible">
 			<div data-ng-switch data-on="config.fields[fieldName].type">
 				<div data-ng-switch-when="multitext">
-					<dc-multitext config="config.fields[fieldName]" model="model[fieldName]" comment="submitComment(comment, fieldName)"></dc-multitext>
+					<dc-multitext config="config.fields[fieldName]" model="model[fieldName]" control="control" comment="submitComment(comment, fieldName)"></dc-multitext>
 				</div>
 				<div data-ng-switch-default>
 					unsupported type {{config.fields[fieldName].type}} for field {{fieldName}}
