--- a/src/angular-app/languageforge/lexicon/directive/dc-sense.html
+++ b/src/angular-app/languageforge/lexicon/directive/dc-sense.html
@@ -1,19 +1,19 @@
 <div class="dc-sense">
-	<div class="deleteX pull-right"><i data-ng-click="remove(index)" title="Delete '{{getSenseTitle(sense)}}'" class="icon-remove"></i></div>
+	<div ng-show="control.canDeleteSense()" class="deleteX pull-right"><i data-ng-click="remove(index)" title="Delete '{{getSenseTitle(sense)}}'" class="icon-remove"></i></div>
 	<div data-ng-repeat="fieldName in config.fieldOrder">
 		<div data-ng-if="config.fields[fieldName].visible">
 			<div data-ng-switch data-on="config.fields[fieldName].type">
 				<div data-ng-switch-when="optionlist">
-					<dc-optionlist config="config.fields[fieldName]" model="model[fieldName]" comment="submitComment(comment, fieldName)"></dc-optionlist>
+					<dc-optionlist control="control" config="config.fields[fieldName]" model="model[fieldName]" comment="submitComment(comment, fieldName)"></dc-optionlist>
 				</div>
 				<div data-ng-switch-when="multitext">
-					<dc-multitext config="config.fields[fieldName]" model="model[fieldName]" comment="submitComment(comment, fieldName)"></dc-multitext>
+					<dc-multitext control="control" config="config.fields[fieldName]" model="model[fieldName]" comment="submitComment(comment, fieldName)"></dc-multitext>
 				</div>
 				<div data-ng-switch-when="fields">
 					<div data-ng-switch data-on="fieldName">
 						<div data-ng-switch-when="examples">
 							<div class="animate-repeat" data-ng-repeat="example in model.examples"> 
-								<dc-example remove="deleteExample" index="$index" config="config.fields[fieldName]" model="example" comment="submitComment(comment, fieldName)"></dc-example>
+								<dc-example control="control" remove="deleteExample" index="$index" config="config.fields[fieldName]" model="example" comment="submitComment(comment, fieldName)"></dc-example>
 							</div>
 							<div class="addItem"><a data-ng-click="addExample()">Add Example</a></div>
 						</div>
