comment show/hide tabs is now working

--- a/src/angular-app/languageforge/lexicon/directive/dc-comments.html
+++ b/src/angular-app/languageforge/lexicon/directive/dc-comments.html
@@ -1,4 +1,4 @@
-<div ng-show="control.showComments()" class="dc-comments" >
+<div ng-show="control.showComments" class="dc-comments" >
 	<!-- ng-repeat over existing comments, nested comments (Design note: two different things? Or the same thing? I'm inclined to say same thing.) -->
 	<div class="comment" data-ng-repeat="comment in model.comments">
  		<div class="scorecontrol">
