--- a/src/angular-app/languageforge/lexicon/directive/dc-entry.html
+++ b/src/angular-app/languageforge/lexicon/directive/dc-entry.html
@@ -2,6 +2,6 @@
 	<dc-multitext config="config.entry.fields.lexeme" model="model.lexeme" control="control" comment="submitComment(comment, 'lexeme')"></dc-multitext>
 	<div class="addItem"><a data-ng-click="addSense()">Add Meaning</a></div>
 		<div class="animate-repeat" data-ng-repeat="sense in model.senses">
-			<dc-sense remove="deleteSense" index="$index" config="config.entry.fields.senses" model="sense" comment="submitComment(comment, 'sense')"></dc-sense>
+			<dc-sense remove="deleteSense" index="$index" config="config.entry.fields.senses" model="sense" control="control" comment="submitComment(comment, 'sense')"></dc-sense>
 		</div>
 </div>
