--- a/src/angular-app/languageforge/lexicon/directive/dc-multitext.html
+++ b/src/angular-app/languageforge/lexicon/directive/dc-multitext.html
@@ -2,7 +2,7 @@
     <div data-ng-repeat="inputSystem in config.inputSystems" class="control-group">
         <label data-ng-if="$first" class="control-label">{{config.label}}</label>
         <div class="controls">
-            <span title="unknown" class="wsid">{{getAbbreviation(inputSystem)}}</span><input data-ng-disabled="{{config.readonly}}" width="{{config.width}}" type="text" data-ng-model="model[inputSystem].value"/>
+            <span title="unknown" class="wsid">{{getAbbreviation(inputSystem)}}</span><input dir="{{getDirection(inputSystem)}}" data-ng-disabled="{{config.readonly}}" width="{{config.width}}" type="text" data-ng-model="model[inputSystem].value"/>
         </div>
         <dc-comments control="control" config="config" model="model[inputSystem]" submit="submitComment(comment, inputSystem)"></dc-comments>
     </div>
