persist interfaceLanguageCode in the user profile

--- a/src/angular-app/languageforge/lexicon/ng-app.html
+++ b/src/angular-app/languageforge/lexicon/ng-app.html
@@ -3,7 +3,7 @@
 		<div class="control-group pull-right">
 			<!-- <label class="control-label" for="language">Interface Language</label> -->
 			<div class="controls">
-				<select class="form-control" id="language"
+				<select class="form-control" id="language" style="width:100%"
 					data-ng-options="interfaceConfig.selectLanguages.options[code] for code in interfaceConfig.selectLanguages.optionsOrder"
 					data-ng-model="interfaceConfig.userLanguageCode"></select>
 			</div>
